<resources>
    <string name="app_name">复旦问答</string>
    <string name="name">复旦问答</string>
    <string name="send_description">发送信息</string>
    <string name="input_description">文本输入区域</string>
    <string name="switch_description">切换输入模式</string>
    <string name="input_hint">请输入文本</string>
    <string name="switch_text">切换</string>
    <string name="send_text">发送</string>
    <string name="asr_start">点击开始说话</string>
    <string name="asr_end">点击结束说话</string>
</resources>